# id3v2lib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: id3v2lib.compat.h  id3v2lib.h
include/id3v2lib/: constants.h  frame.h  header.h  id3v2lib.h  types.h  utils.h
include/modules/: frame.h  frame_header.h  frame_ids.h  frame_list.h  picture_types.h  tag.h  tag_header.h  utils.h
include/modules/frames/: apic_frame.h  comment_frame.h  text_frame.h
src/: CMakeLists.txt  Makefile  frame.c  header.c  id3v2lib.c  id3v2lib.compat.c  types.c  utils.c
src/modules/: char_stream.c  char_stream.private.h  frame.c  frame.private.h  frame_header.c  frame_header.private.h  frame_list.c  frame_list.private.h  tag.c  tag.private.h  tag_header.c  tag_header.private.h  utils.c  utils.private.h
src/modules/frames/: apic_frame.c  apic_frame.private.h  comment_frame.c  comment_frame.private.h  text_frame.c  text_frame.private.h
test/: CMakeLists.txt  assertion_utils.c  assertion_utils.h  compat_test.c  compat_test.h  delete_test.c  delete_test.h  get_test.c  get_test.h  main_test  main_test.c  set_test.c  set_test.h  test_utils.c  test_utils.h  utils.c  utils.h
